
10/12/15 00:29 - Changed the Register(#286090) and Forgot password(#c9302c) buttons colours
10/12/15 00:32 - Bug fix on the controller.
10/12/15 17:28 - login page had a small bug
10/12/15 17:30 - Added a register page and register template
10/12/15 19:25 - Changed forgot a password requirements
10/12/15 23:32 - Login working - Set up sessions. all okay. This was done by having it so that usersDAO called fxn in sessions file.
10/12/15 23:32 -sessions.php file is in DAO folder. Prob should be a controller. this is  a work arround. In the spirt of MVC , should be called by controller

11/12/15 20:36 Buttons added to allow user to login (forgot password + register pages)
11/12/15 20:45 Forgot password now has 3 fields instead of 2
11/12/15 20:55 Home page has  temporary placeholders now
11/12/15 21:06 Navbar for logged in user added.

16/12/15 01:20 I have email validation working. I still have to include it forgot pw(when ready) and register.
16/12/15 01:20 To get it working on other pages. call fxn in controller.(such as update) is isemailvalid() and on template page include bademail.php

17/12/15 18:40 Whenever a user is logged in, it will now display their name like "Hello Mark".
17/12/15 21:40 Javascript file to give a random image if the page is refreshed.
17/12/15 22:20 form done on home page for build.

18/12/15 21:45 Logout working, will now redirect to the index.php
18/12/15 22:00 Add new part working on the parts page

20/12/15 23:45 validation on the insert page for price
20/12/15 23:55 Add new part working on the parts page

21/12/15 00:15 Stopping user pressing add a part with nothing in fields
21/12/15 00:20 Fixed that number field and got rid of the Styling within the home template
21/12/15 00:25 Email checking will now require the @ symbol
21/12/15 00:30 Added in email input type to have the same size input field
21/12/15 00:40 Changed error message, spelt correctly now too
21/12/15 17:06 Displaying table aokay;