@@ -48,3 +48,5 @@ to include a password instead.
 21/12/15 00:30 Added in email input type to have the same size input field
 21/12/15 00:40 Changed error message, spelt correctly now too
 21/12/15 17:06 Displaying table aokay;
+27/12/15 2:05 **MADE EMAIL AN UNIQUE KEY IN DB*
+27/12/15 2:35, Progress on validation. Register user will have a message saying if they were succesfully added and if not, Told they have already registered.
